cant understand how to make @transactional works